# drops

./: README.md  cbmaker.sh  makebin.sh  test
param/surfactant/surfactant/: surfactantxyz.json  surfactantxyzEig.json
src/geom/: multigrid.h  simplex.h
src/levelset/: surfacetension.h
src/misc/: problem.cpp  problem.h  utils.h
src/num/: accumulator.h  discretize.h  hypre.h  lattice-eval.h
src/surfactant/: CMakeLists.txt  eigenvalue_problems.cpp  eigfun.cpp  femP3.cpp  femP3.h  ifacetransp.cpp  ifacetransp.h  sfpde.cpp  sfpde.h  surfactant.cpp  test_tmp.cpp
src/tests/: quad5_2D.cpp
